# rag-openshift-ai-api

./: .dockerignore  Containerfile  Dockerfile  LICENSE  README.md  env.example  main.py  pyproject.toml  requirements.txt  setup.py
api-test-reports/: api_test_report_20250704_133149.txt  api_test_report_20250704_133227.txt  api_test_report_20250704_133332.txt
docs/: API_TESTING.md  CONTAINER.md  DEPLOYMENT.md  HELM_INSTALLATION.md  OPENSHIFT.md  api.md
helm/: Chart.yaml  values-examples.yaml  values.yaml
helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  networkpolicy.yaml  route.yaml  secret.yaml  service.yaml  servicemonitor.yaml
openshift/: deployment.yaml
scripts/: build-docker.sh  build.sh  deploy.sh  helm-install.sh  openshift-build.sh  quick-deploy.sh  run-integration-tests.sh  test-api.sh
src/: __init__.py  main.py  shared_models.py
src/api/: __init__.py  models.py  routes.py
src/config/: __init__.py  settings.py
src/rag/: __init__.py  agent.py  embeddings.py  retriever.py
src/utils/: __init__.py  logging.py  metrics.py
tests/: __init__.py  test-data.json  test_api.py
tests/integration/: __init__.py  conftest.py  test_e2e.py
